--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2183,6 +2183,20 @@ body.is-touch .main {
     background-position: top left, center center;
 }
 
+#schedule {
+    background: url("images/overlay.png"), url("../../images/two.jpg");
+    background-size: 256px 256px, cover;
+    background-attachment: fixed, fixed;
+    background-position: top left, center center;
+}
+
+#compass {
+    background: url("images/overlay.png"), url("../../images/two.jpg");
+    background-size: 256px 256px, cover;
+    background-attachment: fixed, fixed;
+    background-position: top left, center center;
+}
+
 
 #three {
     background: url("images/overlay.png"), url("../../images/intro.jpg");
@@ -2192,7 +2206,7 @@ body.is-touch .main {
 }
 
 .logo_box {
-    max-width:50%;
+    max-width:30%;
     margin:30px auto;
 }
 
@@ -2226,18 +2240,8 @@ body.is-touch .main {
     transform: translateY(100%);
 }
 
-#pbl_title {
-    font-size: 7.25em;
-}
-
 @media screen and (max-width: 736px) {
     #contact .box {
         padding-bottom: 2em;
-    }
-    #pbl_title {
-        font-size: 4em;
-    }
-    .logo_box {
-        max-width: 68%;
     }
 }
