--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2190,7 +2190,7 @@ body.is-touch .main {
     background-position: top left, center center;
 }
 
-#compass {
+#connpass {
     background: url("images/overlay.png"), url("../../images/two.jpg");
     background-size: 256px 256px, cover;
     background-attachment: fixed, fixed;
@@ -2204,8 +2204,6 @@ body.is-touch .main {
     background-attachment: fixed, fixed;
     background-position: top left, center center;
 }
-
-/* Logo */
 
 .logo_box {
     max-width:30%;
@@ -2242,21 +2240,6 @@ body.is-touch .main {
     transform: translateY(100%);
 }
 
-<<<<<<< HEAD
-=======
-#pbl_title {
-    font-size: 7.25em;
-}
-
-.unei_content {
-    padding: 0 20px;
-}
-
-.unei_name {
-    padding-top: 30px;
-}
-
->>>>>>> 6e8f2c6d333d10a0f976a48a6e1458525595928a
 @media screen and (max-width: 736px) {
     #contact .box {
         padding-bottom: 2em;
