説明会の画像を変更

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2184,7 +2184,7 @@ body.is-touch .main {
 }
 
 #schedule {
-    background: url("images/overlay.png"), url("../../images/two.jpg");
+    background: url("images/overlay.png"), url("../../images/setumei.jpg");
     background-size: 256px 256px, cover;
     background-attachment: fixed, fixed;
     background-position: top left, center center;
