--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2218,7 +2218,7 @@ body.is-touch .main {
 
 
 #three {
-    background: url("images/overlay.png"), url("../../images/intro.jpg");
+    background: url("images/overlay.png"), url("../../images/media.JPG");
     background-size: 256px 256px, cover;
     background-attachment: fixed, fixed;
     background-position: top left, center center;
