--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2216,6 +2216,18 @@ body.is-touch .main {
     background-position: top left, center center;
 }
 
+#faq {
+    background: url("images/overlay.png"), url("../../images/three.jpg");
+    background-size: 256px 256px, cover;
+    background-attachment: fixed, fixed;
+    background-position: top left, center center;
+}
+
+#faq div{
+    background-color:mediumturquoise;
+    
+}
+
 
 #three {
     background: url("images/overlay.png"), url("../../images/media.JPG");
