FAQの調整、背景の調整、記事の追加

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2184,7 +2184,8 @@ body.is-touch .main {
 }
 
 #two div{
-    background-color:forestgreen;
+    background-color:limegreen;
+    
     color:whitesmoke;
     
 }
@@ -2197,7 +2198,8 @@ body.is-touch .main {
 }
 
 #presen div{
-    background-color:blue;
+    background-color:dodgerblue;
+    
     color:whitesmoke;
     
 }
