--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2247,6 +2247,11 @@ body.is-touch .main {
     max-width:100%;
  }
 
+ .poster {
+   width: 100%;
+   height: 100%;
+ }
+
 /* Contact */
 
 #contact {
